--- a/samples/android/common/src/main/res/layout/activity_main.xml
+++ b/samples/android/common/src/main/res/layout/activity_main.xml
@@ -10,4 +10,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    tools:context="org.doubango.ultimateAlpr.MainActivity" />
+    tools:context="org.doubango.ultimateAlpr.common.AlprActivity" />
